still need to hook up item<>product but will revisit

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "airtable": "^0.10.1",
-    "monkeylearn": "^3.4.0"
+    "monkeylearn": "^3.4.0",
+    "shortid": "^2.2.16"
   }
 }
