--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "airtable": "^0.10.1",
+    "fuzzball": "^1.4.0",
     "monkeylearn": "^3.4.0",
     "shortid": "^2.2.16",
     "stripe": "^8.141.0"
