--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "fuzzball": "^1.4.0",
     "monkeylearn": "^3.4.0",
     "shortid": "^2.2.16",
-    "stripe": "^8.141.0"
+    "stripe": "^8.141.0",
+    "words-to-numbers": "^1.5.1"
   }
 }
